# thrice

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.py  pyproject.toml  uninstall.py  update.py
.github/: pull_request_template.md
modules/: adaptive_compression.py  agent_loop_components.py  agent_loop_refactor.py  agent_loop_shadow.py  agent_loop_state_machine.py  auto_commit.py  build_loop.py  cache_optimizer.py  change_impact.py  comment_strip_matcher.py  consensus_protocol.py  context_gatherer.py  context_mentions.py  context_optimizer.py  conventional_commit.py  conversation_checkpoint.py  cost_estimator.py  cron_state_machine.py  debugging_guidance.py  diff_preview.py  doctest_runner.py  edit_format.py  enforcement.py  error_recovery.py  hermes_invariants.py  invariants_unified.py  lsp_bridge.py  project_memory.py  prompt_algebra.py  regression_bisector.py  repo_map.py  reproduce_first.py  secret_scanner.py  self_improving_tests.py  self_reflection.py  semantic_diff.py  silent_error_audit.py  skill_index_cache.py  skill_verifier.py  smart_truncation.py  (+13 more)
patches/: agent__context_compressor.py.patch  agent__prompt_builder.py.patch  cron____init__.py.patch  cron__jobs.py.patch  cron__scheduler.py.patch  gateway__session.py.patch  gateway__stream_consumer.py.patch  run_agent.py.patch  tests__tools__test_delegate.py.patch  tools__cronjob_tools.py.patch  tools__delegate_tool.py.patch  tools__file_tools.py.patch  tools__fuzzy_match.py.patch  tools__process_registry.py.patch  tools__skills_tool.py.patch
specs/: REFINEMENT.md
tests/: TEST-STRATEGY.md  conftest.py  test_agent_loop_components.py  test_agent_loop_shadow.py  test_auto_commit.py  test_build_loop.py  test_cache_optimizer.py  test_change_impact.py  test_consensus_protocol.py  test_context_gatherer.py  test_context_mentions.py  test_context_optimizer.py  test_conventional_commit.py  test_conversation_checkpoint.py  test_cost_estimator.py  test_cron_state_machine.py  test_debugging_guidance.py  test_diff_preview.py  test_doctest_runner.py  test_edit_format.py  test_error_recovery.py  test_hermes_invariants.py  test_integration_smoke.py  test_lsp_bridge.py  test_project_memory.py  test_prompt_algebra.py  test_regression_bisector.py  test_repo_map.py  test_reproduce_first.py  test_secret_scanner.py  test_self_improving_tests.py  test_semantic_diff.py  test_silent_error_audit.py  test_skill_cache.py  test_skill_verifier.py  (+11 more)
(+28 files in other folders)
